fix mobile overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,12 @@ h6 {
   margin-top: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+#__next {
+  height: 100%;
+}
+
